Bug 647682 Can't copy and paste local links in <editor> documents r=ehsan f=bz